--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -7,7 +7,7 @@
       fxFlex
     >
       <div class="text-center">
-        <h2 class="app-name">Home Inventory</h2>
+        <h2 class="app-name">Rj Inventory</h2>
       </div>
       <div fxFlex fxlayout="row" fxlayout.lt-md="column">
         <div fxFlexFill>
