--- a/frontend/src/app/layout/components/topnav/topnav.component.html
+++ b/frontend/src/app/layout/components/topnav/topnav.component.html
@@ -9,7 +9,7 @@
   </button>
   <div class="nav-brand">
     <mat-icon>library_books</mat-icon>
-    <span>Home Inventory</span>
+    <span>Rj Inventory</span>
   </div>
   <span class="nav-spacer"></span>
   <button class="hidden-sm" mat-icon-button [matMenuTriggerFor]="profile">
