--- a/frontend/src/app/layout/components/topnav/topnav.component.html
+++ b/frontend/src/app/layout/components/topnav/topnav.component.html
@@ -9,12 +9,12 @@
   </button>
   <div class="nav-brand">
     <mat-icon>library_books</mat-icon>
-    <span>Rj Inventory</span>
+    <span>Inventory</span>
   </div>
   <span class="nav-spacer"></span>
   <button class="hidden-sm" mat-icon-button [matMenuTriggerFor]="profile">
     <mat-icon>account_circle</mat-icon>
-    {{ user.first_name }} {{ user.last_name }}
+    {{ user.username }}
   </button>
   <mat-menu #profile="matMenu">
     <button mat-menu-item>
