--- a/frontend/src/app/layout/user/user.component.html
+++ b/frontend/src/app/layout/user/user.component.html
@@ -1,4 +1,5 @@
 <div>
+  <mat-spinner *ngIf="loader" class="loader" diameter="40"></mat-spinner>
   <div>
     <button color="primary" mat-raised-button (click)="onAddNewUser()">
       Add User
@@ -50,21 +51,11 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>Actions</th>
         <td mat-cell *matCellDef="let element">
-          <button
-            mat-icon-button
-            matTooltip="Click to Edit"
-            color="primary"
-            type="button"
-            (click)="onEditNewUser(element)"
-          >
+          <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
+            (click)="onEditNewUser(element)">
             <mat-icon aria-label="Edit">edit</mat-icon>
           </button>
-          <button
-            mat-icon-button
-            matTooltip="Click to Delete"
-            color="warn"
-            (click)="confirmDialog(element._id)"
-          >
+          <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="confirmDialog(element.id)">
             <mat-icon aria-label="Delete">delete</mat-icon>
           </button>
         </td>
@@ -74,12 +65,8 @@
       <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
     </table>
 
-    <mat-paginator
-      [pageSizeOptions]="pageSizeOptions"
-      [pageSize]="pageSize"
-      showFirstLastButtons
-      aria-label="Select page of elements"
-    >
+    <mat-paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize" showFirstLastButtons
+      aria-label="Select page of elements">
     </mat-paginator>
   </div>
 </div>
