--- a/frontend/src/app/layout/user/add-user/add-user.component.html
+++ b/frontend/src/app/layout/user/add-user/add-user.component.html
@@ -2,16 +2,14 @@
   <h1 mat-dialog-title> {{ !this.data ? 'Add user' : 'Update user' }} </h1>
   <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
 
-
-
     <mat-form-field>
       <mat-label>User Name</mat-label>
-      <input matInput formControlName="username" />
+      <input matInput formControlName="userName" />
     </mat-form-field>
     <div>
       <ng-container *ngIf="
-          formGroup.controls.username.touched &&
-          !formGroup.controls.username.value
+          formGroup.controls.userName.touched &&
+          !formGroup.controls.userName.value
         ">
         <span class="error">User name is Required</span>
       </ng-container>
@@ -19,56 +17,25 @@
 
     <mat-form-field>
       <mat-label>Mobile Number</mat-label>
-      <input matInput formControlName="mobilenumber" type="tel" type="number" />
+      <input matInput formControlName="mobileNumber" type="tel" type="number" />
     </mat-form-field>
     <div>
       <ng-container *ngIf="
-          formGroup.controls.mobilenumber.touched &&
-          !formGroup.controls.mobilenumber.value
+          formGroup.controls.mobileNumber.touched &&
+          !formGroup.controls.mobileNumber.value
         ">
         <span class="error">Mobile Number is Required</span>
       </ng-container>
     </div>
 
-
     <mat-form-field>
       <mat-label>Password</mat-label>
       <input matInput formControlName="password" type="password" minlength="6" />
     </mat-form-field>
-    <!-- <div>
-      <ng-container *ngIf="
-          formGroup.controls.password.touched &&
-          !formGroup.controls.password.value
-        ">
-        <span class="error">Password is Required</span>
-      </ng-container>
-    </div> -->
-
-    <!-- <mat-form-field>
-      <mat-label>Role</mat-label>
-      <input matInput formControlName="role"  />
-    </mat-form-field>
-    <div>
-      <ng-container *ngIf="
-          formGroup.controls.role.touched &&
-          !formGroup.controls.role.value
-        ">
-        <span class="error">Role is Required</span>
-      </ng-container>
-    </div> -->
-
-    <!--  -->
-    <!-- <mat-select [(ngModel)]="selectedValue"  name="food">
-      <mat-option *ngFor="let food of foods" [value]="food.value">
-        {{food.viewValue}}
-      </mat-option>
-    </mat-select> -->
-    <!--  -->
-
 
     <mat-form-field>
       <mat-label>Select Role</mat-label>
-     <mat-select [(ngModel)]="selectedRole" name="role">
+     <mat-select  formControlName="role" name="role">
         <mat-option *ngFor="let role of roles" [value]="role.value" >
           {{role.value}}
         </mat-option>
@@ -77,12 +44,12 @@
 
     <mat-form-field>
       <mat-label>Opening Balance</mat-label>
-      <input matInput formControlName="openingbalance" type="number" />
+      <input matInput formControlName="openingBalance" type="number" />
     </mat-form-field>
     <div>
       <ng-container *ngIf="
-          formGroup.controls.openingbalance.touched &&
-          !formGroup.controls.openingbalance.value
+          formGroup.controls.openingBalance.touched &&
+          !formGroup.controls.openingBalance.value
         ">
         <span class="error">Opening Balance is Required</span>
 
@@ -92,23 +59,20 @@
       <mat-label>Permission</mat-label>
       <input matInput formControlName="permission" />
     </mat-form-field>
-    <!-- <div>
+    <div>
       <ng-container *ngIf="
           formGroup.controls.permission.touched &&
           !formGroup.controls.permission.value
         ">
         <span class="error">Permission is Required</span>
       </ng-container>
-    </div> -->
-
-
+    </div>
     <div class="btn-update">
       <button mat-raised-button color="primary" [disabled]="!formGroup.valid" type="submit">
         <span>
           {{ !this.data ? 'Save' : 'Update' }}
         </span>
       </button>
-    
     </div>
   </form>
 </div>
