--- a/frontend/src/app/layout/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/layout/components/sidebar/sidebar.component.html
@@ -8,5 +8,57 @@
       <mat-icon class="sidenav-icon">person</mat-icon>
       {{ 'User' | translate }}
     </a>
+    <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/cdf']">
+      <mat-icon class="sidenav-icon">person</mat-icon>
+      {{ 'CDF' | translate }}
+    </a>
+    <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/customers']">
+      <mat-icon class="sidenav-icon">person</mat-icon>
+      {{ 'Customers' | translate }}
+    </a>
+    <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/items']">
+      <mat-icon class="sidenav-icon">person</mat-icon>
+      {{ 'Items' | translate }}
+    </a>
+    <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/sales']">
+      <mat-icon class="sidenav-icon">person</mat-icon>
+      {{ 'Sales' | translate }}
+    </a>
+    <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/salesQuotation']">
+      <mat-icon class="sidenav-icon">person</mat-icon>
+      {{ 'Sales Quotation' | translate }}
+    </a>
+    <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/suppliers']">
+      <mat-icon class="sidenav-icon">person</mat-icon>
+      {{ 'Suppliers' | translate }}
+    </a>
+    <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/purchaseQuotation']">
+      <mat-icon class="sidenav-icon">person</mat-icon>
+      {{ 'Purchase Quotation' | translate }}
+    </a>
+    <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/purchase']">
+      <mat-icon class="sidenav-icon">person</mat-icon>
+      {{ 'Purchase' | translate }}
+    </a>
+    <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/expense']">
+      <mat-icon class="sidenav-icon">person</mat-icon>
+      {{ 'Expense' | translate }}
+    </a>
+    <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/transfer']">
+      <mat-icon class="sidenav-icon">person</mat-icon>
+      {{ 'Transfer' | translate }}
+    </a>
+    <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/analysis']">
+      <mat-icon class="sidenav-icon">person</mat-icon>
+      {{ 'Analysis' | translate }}
+    </a>
+    <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/rojMed']">
+      <mat-icon class="sidenav-icon">person</mat-icon>
+      {{ 'Roj-med' | translate }}
+    </a>
+    <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/history']">
+      <mat-icon class="sidenav-icon">person</mat-icon>
+      {{ 'History' | translate }}
+    </a>
   </mat-nav-list>
 </div>
