--- a/frontend/src/app/layout/components/topnav/topnav.component.html
+++ b/frontend/src/app/layout/components/topnav/topnav.component.html
@@ -14,7 +14,7 @@
   <span class="nav-spacer"></span>
   <button class="hidden-sm" mat-icon-button [matMenuTriggerFor]="profile">
     <mat-icon>account_circle</mat-icon>
-    {{ user.username }}
+    {{ user.user_name }}
   </button>
   <mat-menu #profile="matMenu">
     <button mat-menu-item>
