--- a/frontend/src/app/layout/user/user.component.html
+++ b/frontend/src/app/layout/user/user.component.html
@@ -1,13 +1,21 @@
 <div>
   <mat-spinner *ngIf="loader" class="loader" diameter="40"></mat-spinner>
   <div>
-    <button color="primary" mat-raised-button (click)="onAddNewUser()">
+    <mat-form-field >
+      <mat-label>Search...</mat-label>
+      <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getUser()">
+    </mat-form-field>
+    <button color="primary" class="margin"  mat-raised-button (click)="getUser()">
+      Search
+    </button>
+
+    <button color="primary"  mat-raised-button (click)="onAddNewUser()">
       Add User
     </button>
   </div>
   <br />
   <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort>
+    <table mat-table [dataSource]="dataSource"  matSort (matSortChange)="sortData($event)" matSortActive="user_name"  matSortDirection="asc">
       <ng-container matColumnDef="user_name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>User Name</th>
         <td mat-cell *matCellDef="let element">
@@ -65,7 +73,7 @@
       <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
     </table>
 
-    <mat-paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize" showFirstLastButtons
+    <mat-paginator #paginator  [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons (page)="pageChanged($event)" [length]="+totalRows"
       aria-label="Select page of elements">
     </mat-paginator>
   </div>
