--- a/frontend/src/app/layout/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/layout/components/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
       {{ 'Dashboard' | translate }}
     </a>
     <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/user']">
-      <mat-icon class="sidenav-icon">person</mat-icon>
+      <mat-icon class="sidenav-icon">people</mat-icon>
       {{ 'User' | translate }}
     </a>
     <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/cdf']">
@@ -13,51 +13,51 @@
       {{ 'CDF' | translate }}
     </a>
     <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/customers']">
-      <mat-icon class="sidenav-icon">person</mat-icon>
+      <mat-icon class="sidenav-icon">people</mat-icon>
       {{ 'Customers' | translate }}
     </a>
     <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/items']">
-      <mat-icon class="sidenav-icon">person</mat-icon>
+      <mat-icon class="sidenav-icon">list</mat-icon>
       {{ 'Items' | translate }}
     </a>
     <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/sales']">
-      <mat-icon class="sidenav-icon">person</mat-icon>
+      <mat-icon class="sidenav-icon">payment</mat-icon>
       {{ 'Sales' | translate }}
     </a>
     <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/salesQuotation']">
-      <mat-icon class="sidenav-icon">person</mat-icon>
+      <mat-icon class="sidenav-icon">bookmark_border</mat-icon>
       {{ 'Sales Quotation' | translate }}
     </a>
     <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/suppliers']">
-      <mat-icon class="sidenav-icon">person</mat-icon>
+      <mat-icon class="sidenav-icon">bookmark_border</mat-icon>
       {{ 'Suppliers' | translate }}
     </a>
     <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/purchaseQuotation']">
-      <mat-icon class="sidenav-icon">person</mat-icon>
+      <mat-icon class="sidenav-icon">payment</mat-icon>
       {{ 'Purchase Quotation' | translate }}
     </a>
     <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/purchase']">
-      <mat-icon class="sidenav-icon">person</mat-icon>
+      <mat-icon class="sidenav-icon">payment</mat-icon>
       {{ 'Purchase' | translate }}
     </a>
     <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/expense']">
-      <mat-icon class="sidenav-icon">person</mat-icon>
+      <mat-icon class="sidenav-icon">attach_money</mat-icon>
       {{ 'Expense' | translate }}
     </a>
     <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/transfer']">
-      <mat-icon class="sidenav-icon">person</mat-icon>
+      <mat-icon class="sidenav-icon">attach_money</mat-icon>
       {{ 'Transfer' | translate }}
     </a>
     <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/analysis']">
-      <mat-icon class="sidenav-icon">person</mat-icon>
+      <mat-icon class="sidenav-icon">timeline</mat-icon>
       {{ 'Analysis' | translate }}
     </a>
     <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/rojMed']">
-      <mat-icon class="sidenav-icon">person</mat-icon>
+      <mat-icon class="sidenav-icon">money</mat-icon>
       {{ 'Roj-med' | translate }}
     </a>
     <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/history']">
-      <mat-icon class="sidenav-icon">person</mat-icon>
+      <mat-icon class="sidenav-icon">history</mat-icon>
       {{ 'History' | translate }}
     </a>
   </mat-nav-list>
