--- a/frontend/src/app/layout/customers/customers.component.html
+++ b/frontend/src/app/layout/customers/customers.component.html
@@ -1,4 +1,78 @@
+<div>
+    <mat-spinner *ngIf="loader" class="loader" diameter="40"></mat-spinner>
+    <div>
+        <mat-form-field>
+            <mat-label>Search...</mat-label>
+            <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getUser()">
+        </mat-form-field>
+        <button color="primary" class="margin" mat-raised-button (click)="getUser()">
+      Search
+    </button>
 
-<h2>
-    Customers
-</h2>
+        <button color="primary" mat-raised-button (click)="onAddNewUser()">
+      Add Customers
+    </button>
+    </div>
+    <br />
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="user_name" matSortDirection="asc">
+            <ng-container matColumnDef="user_name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>User Name</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.user_name }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="password">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Password</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.password }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="mobile_number">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Mobile Number</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.mobile_number }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="opening_balance">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Opening Balance</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.opening_balance }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="role">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Role</th>
+                <td mat-cell *matCellDef="let element">{{ element.role }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="permission">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Permission</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.permission }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef>Actions</th>
+                <td mat-cell *matCellDef="let element">
+                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button" (click)="onEditNewUser(element)">
+            <mat-icon aria-label="Edit">edit</mat-icon>
+          </button>
+                    <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="confirmDialog(element.id)">
+            <mat-icon aria-label="Delete">delete</mat-icon>
+          </button>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
+        </table>
+
+        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
+        </mat-paginator>
+    </div>
+</div>
