--- a/frontend/src/app/layout/customers/customers.component.html
+++ b/frontend/src/app/layout/customers/customers.component.html
@@ -3,68 +3,90 @@
     <div>
         <mat-form-field>
             <mat-label>Search...</mat-label>
-            <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getUser()">
+            <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getCustomers()">
         </mat-form-field>
-        <button color="primary" class="margin" mat-raised-button (click)="getUser()">
-      Search
-    </button>
+        <button color="primary" class="margin" mat-raised-button (click)="getCustomers()">
+            Search
+        </button>
 
-        <button color="primary" mat-raised-button (click)="onAddNewUser()">
-      Add Customers
-    </button>
+        <button color="primary" mat-raised-button (click)="onAddNewCustomers()">
+            Add Customers
+        </button>
     </div>
     <br />
     <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="user_name" matSortDirection="asc">
-            <ng-container matColumnDef="user_name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>User Name</th>
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="company" matSortDirection="asc">
+
+            <ng-container matColumnDef="company">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Company</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.user_name }}
+                    {{ element.company }}
                 </td>
             </ng-container>
 
-            <ng-container matColumnDef="password">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Password</th>
+            <ng-container matColumnDef="first_name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.password }}
+                    {{ element.first_name }}
                 </td>
             </ng-container>
 
-            <ng-container matColumnDef="mobile_number">
+            <ng-container matColumnDef="address">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Address</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.address }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="email">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.email }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="mobile_no">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Mobile Number</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.mobile_number }}
+                    {{ element.mobile_no }}
                 </td>
             </ng-container>
 
-            <ng-container matColumnDef="opening_balance">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Opening Balance</th>
+            <ng-container matColumnDef="due_limit">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Due Limit</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.opening_balance }}
+                    {{ element.due_limit }}
                 </td>
             </ng-container>
 
-            <ng-container matColumnDef="role">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Role</th>
-                <td mat-cell *matCellDef="let element">{{ element.role }}</td>
+            <ng-container matColumnDef="balance">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Balance</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.balance }}
+                </td>
             </ng-container>
 
-            <ng-container matColumnDef="permission">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Permission</th>
+            <ng-container matColumnDef="other">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Other</th>
+                <td mat-cell *matCellDef="let element">{{ element.other }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="tier">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Tier</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.permission }}
+                    {{ element.tier }}
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button" (click)="onEditNewUser(element)">
-            <mat-icon aria-label="Edit">edit</mat-icon>
-          </button>
+                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button" (click)="onEditNewCustomers(element)">
+                        <mat-icon aria-label="Edit">edit</mat-icon>
+                    </button>
                     <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="confirmDialog(element.id)">
-            <mat-icon aria-label="Delete">delete</mat-icon>
-          </button>
+                        <mat-icon aria-label="Delete">delete</mat-icon>
+                    </button>
                 </td>
             </ng-container>
 
