--- a/frontend/src/app/layout/customers/customers.component.html
+++ b/frontend/src/app/layout/customers/customers.component.html
@@ -12,6 +12,10 @@
         <button color="primary" mat-raised-button (click)="onAddNewCustomers()">
             Add Customers
         </button>
+
+        <button color="primary" class="margin" mat-raised-button (click)="openTires()">
+            Tiers
+        </button>
     </div>
     <br />
     <div class="mat-elevation-z8">
@@ -62,7 +66,7 @@
             <ng-container matColumnDef="balance">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Balance</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.balance }}
+                    {{ element.balance | currency: 'INR' }}
                 </td>
             </ng-container>
 
