--- a/frontend/src/app/layout/customers/delete-customers/delete-customers.component.html
+++ b/frontend/src/app/layout/customers/delete-customers/delete-customers.component.html
@@ -6,5 +6,5 @@
 
 <div mat-dialog-actions>
     <button mat-button (click)="onDismiss()">No</button>
-    <button mat-raised-button color="primary" (click)="removeUser()">Yes</button>
+    <button mat-raised-button color="primary" (click)="removeCustomers()">Yes</button>
 </div>
