--- a/frontend/src/app/layout/customers/customers.component.html
+++ b/frontend/src/app/layout/customers/customers.component.html
@@ -75,10 +75,10 @@
                 <td mat-cell *matCellDef="let element">{{ element.other }}</td>
             </ng-container>
 
-            <ng-container matColumnDef="tier">
+            <ng-container matColumnDef="tier_name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Tier</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.tier }}
+                    {{ element.tier_name }}
                 </td>
             </ng-container>
 
