--- a/frontend/src/app/layout/customers/tier/tier.component.html
+++ b/frontend/src/app/layout/customers/tier/tier.component.html
@@ -27,7 +27,7 @@
 
 
         <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
             <td mat-cell *matCellDef="let element">
                 {{ element.name }}
             </td>
