--- a/frontend/src/app/layout/expense/expense.component.html
+++ b/frontend/src/app/layout/expense/expense.component.html
@@ -1,2 +1,8 @@
-
-<h2>Expense</h2>
+<div>
+    <div>
+      <button color="primary"  mat-raised-button (click)="openCategory()">
+        Categories
+      </button>
+    </div>
+    <br />
+  </div>
