--- a/frontend/src/app/layout/customers/add-customers/add-customers.component.html
+++ b/frontend/src/app/layout/customers/add-customers/add-customers.component.html
@@ -1,5 +1,7 @@
 <div class="container">
-    <h1 mat-dialog-title> {{ !this.data ? 'Add Customers' : 'Update Customers' }} </h1>
+    <h1 mat-dialog-title> {{ !this.data ? 'Add Customer' : 'Update Customer' }} </h1>
+    <mat-divider></mat-divider>
+    <br>
     <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
 
         <!-- company start -->
