--- a/frontend/src/app/layout/expense/cateogry/category.component.html
+++ b/frontend/src/app/layout/expense/cateogry/category.component.html
@@ -1,4 +1,9 @@
 <div>
+    <h1 mat-dialog-title> Category </h1>
+</div>
+<mat-divider></mat-divider>
+<br>
+<div>
     <mat-form-field>
         <mat-label>Search...</mat-label>
         <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getCategory()">
@@ -14,7 +19,8 @@
 </div>
 <div class="mat-elevation-z8">
 
-    <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="code" matSortDirection="asc">
+    <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="code"
+        matSortDirection="asc">
 
         <ng-container matColumnDef="code">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Code</th>
@@ -34,7 +40,8 @@
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef>Actions</th>
             <td mat-cell *matCellDef="let element">
-                <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button" (click)="onEditCategory(element)">
+                <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
+                    (click)="onEditCategory(element)">
                     <mat-icon aria-label="Edit">edit</mat-icon>
                 </button>
                 <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="confirmDialog(element.id)">
@@ -47,6 +54,7 @@
         <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
     </table>
 
-    <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
+    <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons
+        (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
     </mat-paginator>
 </div>
