--- a/frontend/src/app/layout/expense/cateogry/delete-category/delete-category.component.html
+++ b/frontend/src/app/layout/expense/cateogry/delete-category/delete-category.component.html
@@ -1,5 +1,6 @@
 <h1 mat-dialog-title>Confirm</h1>
-
+<mat-divider></mat-divider>
+<br>
 <div mat-dialog-content>
     <p>Are you sure you want to delete?</p>
 </div>
