--- a/frontend/src/app/layout/transfer/transfer.component.html
+++ b/frontend/src/app/layout/transfer/transfer.component.html
@@ -1,2 +1,78 @@
+<div>
+    <mat-spinner *ngIf="loader" class="loader" diameter="40"></mat-spinner>
+    <div>
+        <mat-form-field>
+            <mat-label>Search...</mat-label>
+            <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getTransfer()">
+        </mat-form-field>
+        <button color="primary" class="margin" mat-raised-button (click)="getTransfer()">
+        Search
+      </button>
 
-<h2>    Transfer  </h2>
+        <button color="primary" class="margin" mat-raised-button (click)="onAddNewUser()">
+        Add Transfer
+      </button>
+    </div>
+    <br />
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="id" matSortDirection="asc">
+            <ng-container matColumnDef="userId">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.userId }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="date">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.date }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="description">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.description }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="amount">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Amount</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.amount | currency: 'INR' }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="user">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>User</th>
+                <td mat-cell *matCellDef="let element">{{ element.user }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="to">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>TO</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.to }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef>Actions</th>
+                <td mat-cell *matCellDef="let element">
+                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button" (click)="onEditNewUser(element)">
+              <mat-icon aria-label="Edit">edit</mat-icon>
+            </button>
+                    <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="confirmDialog(element.id)">
+              <mat-icon aria-label="Delete">delete</mat-icon>
+            </button>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
+        </table>
+
+        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
+        </mat-paginator>
+    </div>
+</div>
