--- a/frontend/src/app/layout/customers/customers.component.html
+++ b/frontend/src/app/layout/customers/customers.component.html
@@ -59,7 +59,7 @@
             <ng-container matColumnDef="due_limit">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Due Limit</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.due_limit }}
+                    {{ element.due_limit | currency: 'INR' }}
                 </td>
             </ng-container>
 
