--- a/frontend/src/app/layout/transfer/transfer.component.html
+++ b/frontend/src/app/layout/transfer/transfer.component.html
@@ -6,27 +6,22 @@
             <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getTransfer()">
         </mat-form-field>
         <button color="primary" class="margin" mat-raised-button (click)="getTransfer()">
-        Search
-      </button>
+            Search
+        </button>
 
         <button color="primary" class="margin" mat-raised-button (click)="onAddNewUser()">
-        Add Transfer
-      </button>
+            Add Transfer
+        </button>
     </div>
     <br />
     <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="id" matSortDirection="asc">
-            <ng-container matColumnDef="userId">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
-                <td mat-cell *matCellDef="let element">
-                    {{ element.userId }}
-                </td>
-            </ng-container>
+
 
             <ng-container matColumnDef="date">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.date }}
+                    {{ element.date | date : 'medium'}}
                 </td>
             </ng-container>
 
@@ -44,27 +39,22 @@
                 </td>
             </ng-container>
 
-            <ng-container matColumnDef="user">
+            <ng-container matColumnDef="user_name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>User</th>
-                <td mat-cell *matCellDef="let element">{{ element.user }}</td>
+                <td mat-cell *matCellDef="let element">{{ element.user_name }}</td>
             </ng-container>
 
-            <ng-container matColumnDef="to">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>TO</th>
-                <td mat-cell *matCellDef="let element">
-                    {{ element.to }}
-                </td>
-            </ng-container>
+
 
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
                     <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button" (click)="onEditNewUser(element)">
-              <mat-icon aria-label="Edit">edit</mat-icon>
-            </button>
+                        <mat-icon aria-label="Edit">edit</mat-icon>
+                    </button>
                     <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="confirmDialog(element.id)">
-              <mat-icon aria-label="Delete">delete</mat-icon>
-            </button>
+                        <mat-icon aria-label="Delete">delete</mat-icon>
+                    </button>
                 </td>
             </ng-container>
 
