--- a/frontend/src/app/layout/user/user.component.html
+++ b/frontend/src/app/layout/user/user.component.html
@@ -1,21 +1,29 @@
 <div>
     <mat-spinner *ngIf="loader" class="loader" diameter="40"></mat-spinner>
-    <div>
-        <mat-form-field>
-            <mat-label>Search...</mat-label>
-            <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getUser()">
-        </mat-form-field>
-        <button color="primary" class="margin" mat-raised-button (click)="getUser()">
-      Search
-    </button>
+    <div class="header">
+        <div>
 
-        <button color="primary" mat-raised-button (click)="onAddNewUser()">
-      Add User
-    </button>
+            <mat-form-field>
+                <mat-label>Search...</mat-label>
+                <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getUser()">
+            </mat-form-field>
+            <button color="primary" class="margin" mat-raised-button (click)="getUser()">
+                Search
+            </button>
+
+            <button color="primary" mat-raised-button (click)="onAddNewUser()">
+                Add User
+            </button>
+        </div>
+
+        <div>
+            <mat-slide-toggle (change)="toggleType()" [checked]="tableParams.active">Active</mat-slide-toggle>
+        </div>
     </div>
     <br />
     <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="user_name" matSortDirection="asc">
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="user_name"
+            matSortDirection="asc">
             <ng-container matColumnDef="user_name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>User Name</th>
                 <td mat-cell *matCellDef="let element">
@@ -37,10 +45,10 @@
                 </td>
             </ng-container>
 
-            <ng-container matColumnDef="opening_balance">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Opening Balance</th>
+            <ng-container matColumnDef="balance">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Balance</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.opening_balance | currency: 'INR' }}
+                    {{ element.balance | currency: 'INR' }}
                 </td>
             </ng-container>
 
@@ -49,22 +57,17 @@
                 <td mat-cell *matCellDef="let element">{{ element.role }}</td>
             </ng-container>
 
-            <ng-container matColumnDef="permission">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Permission</th>
-                <td mat-cell *matCellDef="let element">
-                    {{ element.permission }}
-                </td>
-            </ng-container>
-
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button" (click)="onEditNewUser(element)">
-            <mat-icon aria-label="Edit">edit</mat-icon>
-          </button>
-                    <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="confirmDialog(element.id)">
-            <mat-icon aria-label="Delete">delete</mat-icon>
-          </button>
+                    <button *ngIf="element.is_active" mat-icon-button matTooltip="Click to Edit" color="primary"
+                        type="button" (click)="onEditNewUser(element)">
+                        <mat-icon aria-label="Edit">edit</mat-icon>
+                    </button>
+                    <button mat-icon-button matTooltip="Click to Delete" color="warn"
+                        (click)="confirmDialog(element.id)">
+                        <mat-icon aria-label="Delete">delete</mat-icon>
+                    </button>
                 </td>
             </ng-container>
 
@@ -72,7 +75,8 @@
             <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
         </table>
 
-        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
+        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons
+            (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
         </mat-paginator>
     </div>
 </div>
