--- a/frontend/src/app/layout/suppliers/suppliers.component.html
+++ b/frontend/src/app/layout/suppliers/suppliers.component.html
@@ -1,4 +1,67 @@
+<div>
+    <mat-spinner *ngIf="loader" class="loader" diameter="40"></mat-spinner>
+    <div>
+        <mat-form-field>
+            <mat-label>Search...</mat-label>
+            <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getSuppliers()">
+        </mat-form-field>
+        <button color="primary" class="margin" mat-raised-button (click)="getSuppliers()">
+            Search
+        </button>
 
-<h2>
-    Suppliers
-</h2>
+        <button color="primary" class="margin" mat-raised-button (click)="onAddNewSuppliers()">
+            Add Suppliers
+        </button>
+    </div>
+    <br />
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="id" matSortDirection="asc">
+
+            <ng-container matColumnDef="company">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Company</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.company }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="dueLimit">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Due Limit</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.dueLimit | currency: 'INR' }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="balance">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Balance</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.balance | currency: 'INR' }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="other">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Other</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.other }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef>Actions</th>
+                <td mat-cell *matCellDef="let element">
+                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button" (click)="onEditNewSuppliers(element)">
+                        <mat-icon aria-label="Edit">edit</mat-icon>
+                    </button>
+                    <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="confirmDialog(element.id)">
+                        <mat-icon aria-label="Delete">delete</mat-icon>
+                    </button>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
+        </table>
+
+        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
+        </mat-paginator>
+    </div>
+</div>
