--- a/frontend/src/app/layout/customers/customers.component.html
+++ b/frontend/src/app/layout/customers/customers.component.html
@@ -1,21 +1,27 @@
 <div>
     <mat-spinner *ngIf="loader" class="loader" diameter="40"></mat-spinner>
-    <div>
-        <mat-form-field>
-            <mat-label>Search...</mat-label>
-            <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getCustomers()">
-        </mat-form-field>
-        <button color="primary" class="margin" mat-raised-button (click)="getCustomers()">
-            Search
-        </button>
+    <div class="header">
+        <div>
+            <mat-form-field>
+                <mat-label>Search...</mat-label>
+                <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getCustomers()">
+            </mat-form-field>
+            <button color="primary" class="margin" mat-raised-button (click)="getCustomers()">
+                Search
+            </button>
 
-        <button color="primary" mat-raised-button (click)="onAddNewCustomers()">
-            Add Customers
-        </button>
+            <button color="primary" mat-raised-button (click)="onAddNewCustomers()">
+                Add Customers
+            </button>
 
-        <button color="primary" class="margin" mat-raised-button (click)="openTires()">
-            Tiers
-        </button>
+            <button color="primary" class="margin" mat-raised-button (click)="openTires()">
+                Tiers
+            </button>
+        </div>
+        <div>
+            <mat-slide-toggle color="primary" (change)="toggleType()" [checked]="tableParams.active">Active
+            </mat-slide-toggle>
+        </div>
     </div>
     <br />
     <div class="mat-elevation-z8">
