--- a/frontend/src/app/layout/customers/customers.component.scss
+++ b/frontend/src/app/layout/customers/customers.component.scss
@@ -1,11 +1,19 @@
 table {
     width: 100%;
-  }
-  .loader{
+}
+
+.loader {
     position: absolute;
     top: 45%;
     left: 45%;
-  }
-  .margin{
-    margin: 0 10px 0  10px;
-  }
+}
+
+.margin {
+    margin: 0 10px 0 10px;
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
