--- a/frontend/src/app/layout/items/items.component.html
+++ b/frontend/src/app/layout/items/items.component.html
@@ -1,4 +1,97 @@
+<div>
+    <mat-spinner *ngIf="loader" class="loader" diameter="40"></mat-spinner>
+    <div class="header">
+        <div>
+            <mat-form-field>
+                <mat-label>Search...</mat-label>
+                <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getItems()">
+            </mat-form-field>
+            <button color="primary" class="margin" mat-raised-button (click)="getItems()">
+            Search
+        </button>
 
-<h2>
-    Items
-</h2>
+        </div>
+        <div>
+            <mat-slide-toggle color="primary" (change)="toggleType()" [checked]="tableParams.active">Active
+            </mat-slide-toggle>
+        </div>
+    </div>
+    <br />
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="company" matSortDirection="asc">
+
+            <ng-container matColumnDef="code">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Code</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.code }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.name }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="int_qty">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Int.Qty</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.int_qty }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="purchased">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Purchased</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.purchased }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="sold">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>sold /th>
+                    <td mat-cell *matCellDef="let element">
+                        {{ element.sold }}
+                    </td>
+            </ng-container>
+
+            <ng-container matColumnDef="available">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Available </th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.available }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="sliver_price">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Sliver Price</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.sliver_price | currency: 'INR' }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="total">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Total</th>
+                <td mat-cell *matCellDef="let element">{{ element.total | currency: 'INR' }}</td>
+            </ng-container>
+
+
+            <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef>Actions</th>
+                <td mat-cell *matCellDef="let element">
+                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button" (click)="onEditNewCustomers(element)">
+                        <mat-icon aria-label="Edit">edit</mat-icon>
+                    </button>
+                    <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="confirmDialog(element.id)">
+                        <mat-icon aria-label="Delete">delete</mat-icon>
+                    </button>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
+        </table>
+
+        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
+        </mat-paginator>
+    </div>
+</div>
