--- a/frontend/src/app/layout/suppliers/suppliers.component.scss
+++ b/frontend/src/app/layout/suppliers/suppliers.component.scss
@@ -11,3 +11,9 @@ table {
 .margin {
     margin: 0 10px 0 10px;
 }
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
