--- a/frontend/src/app/layout/expense/cateogry/category.component.scss
+++ b/frontend/src/app/layout/expense/cateogry/category.component.scss
@@ -11,3 +11,12 @@ table {
 .margin {
     margin: 0 8px 0 8px;
 }
+
+th {
+    color: rgb(0, 0, 0);
+    font-size: 16px;
+}
+
+td {
+    color: rgb(73 70 70 / 87%);
+}
