--- a/frontend/src/app/layout/purchase-quotation/purchase-quotation.component.scss
+++ b/frontend/src/app/layout/purchase-quotation/purchase-quotation.component.scss
@@ -17,3 +17,12 @@ table {
     align-items: center;
     justify-content: space-between;
 }
+
+th {
+    color: rgb(0, 0, 0);
+    font-size: 16px;
+}
+
+td {
+    color: rgb(73 70 70 / 87%);
+}
