--- a/frontend/src/app/layout/suppliers/suppliers.component.html
+++ b/frontend/src/app/layout/suppliers/suppliers.component.html
@@ -31,10 +31,10 @@
                 </td>
             </ng-container>
 
-            <ng-container matColumnDef="dueLimit">
+            <ng-container matColumnDef="due_limit">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Due Limit</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.dueLimit | currency: 'INR' }}
+                    {{ element.due_limit | currency: 'INR' }}
                 </td>
             </ng-container>
 
