--- a/frontend/src/app/layout/user/user.component.html
+++ b/frontend/src/app/layout/user/user.component.html
@@ -11,12 +11,12 @@
                 Search
             </button>
 
-            <button color="primary" mat-raised-button (click)="onAddNewUser()">
+            <button color="primary" mat-raised-button (click)="onAddNewUser()" *ngIf="isLoggedInUserIsOwner">
                 Add User
             </button>
         </div>
 
-        <div>
+        <div *ngIf="isLoggedInUserIsOwner">
             <mat-slide-toggle color="primary" (change)="toggleType()" [checked]="tableParams.active">Active
             </mat-slide-toggle>
         </div>
@@ -65,7 +65,7 @@
                         type="button" (click)="onEditNewUser(element)">
                         <mat-icon aria-label="Edit">edit</mat-icon>
                     </button>
-                    <button mat-icon-button matTooltip="{{tableParams.active? 'Click to DActive': 'Click to Active'}}"
+                    <button *ngIf="isLoggedInUserIsOwner" mat-icon-button matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}"
                         color="{{tableParams.active? 'warn': 'primary'}}" (click)="changeStatus(element.id)">
                         <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}</mat-icon>
                     </button>
